package orm.dsl.ddl;

public interface DropTableStep extends DDLFirstStep {

}
